--- a/index.html
+++ b/index.html
@@ -1,4 +1,414 @@
 
-第一题：
-输入111
-输出111
+<!DOCTYPE html>
+<html>
+<head>
+<title>SQL COOKBOOK NOTE N0.1</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<style type="text/css">
+/* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
+/* Author: Nicolas Hery - http://nicolashery.com */
+/* Version: b13fe65ca28d2e568c6ed5d7f06581183df8f2ff */
+/* Source: https://github.com/nicolahery/markdownpad-github */
+
+/* RESET
+=============================================================================*/
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+/* BODY
+=============================================================================*/
+
+body {
+  font-family: Helvetica, arial, freesans, clean, sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+  background-color: #fff;
+  padding: 20px;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+body>*:first-child {
+  margin-top: 0 !important;
+}
+
+body>*:last-child {
+  margin-bottom: 0 !important;
+}
+
+/* BLOCKS
+=============================================================================*/
+
+p, blockquote, ul, ol, dl, table, pre {
+  margin: 15px 0;
+}
+
+/* HEADERS
+=============================================================================*/
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 20px 0 10px;
+  padding: 0;
+  font-weight: bold;
+  -webkit-font-smoothing: antialiased;
+}
+
+h1 tt, h1 code, h2 tt, h2 code, h3 tt, h3 code, h4 tt, h4 code, h5 tt, h5 code, h6 tt, h6 code {
+  font-size: inherit;
+}
+
+h1 {
+  font-size: 30px;
+  color: #000;
+}
+
+h2 {
+  font-size: 26px;
+  border-bottom: 1px solid #ccc;
+  color: #000;
+}
+
+h3 {
+  font-size: 20px;
+}
+
+h4 {
+  font-size: 18px;
+}
+
+h5 {
+  font-size: 16px;
+}
+
+h6 {
+  color: #777;
+  font-size: 14px;
+}
+
+body>h2:first-child, body>h1:first-child, body>h1:first-child+h2, body>h3:first-child, body>h4:first-child, body>h5:first-child, body>h6:first-child {
+  margin-top: 0;
+  padding-top: 0;
+}
+
+a:first-child h1, a:first-child h2, a:first-child h3, a:first-child h4, a:first-child h5, a:first-child h6 {
+  margin-top: 0;
+  padding-top: 0;
+}
+
+h1+p, h2+p, h3+p, h4+p, h5+p, h6+p {
+  margin-top: 10px;
+}
+
+/* LINKS
+=============================================================================*/
+
+a {
+  color: #4183C4;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* LISTS
+=============================================================================*/
+
+ul, ol {
+  padding-left: 30px;
+}
+
+ul li > :first-child, 
+ol li > :first-child, 
+ul li ul:first-of-type, 
+ol li ol:first-of-type, 
+ul li ol:first-of-type, 
+ol li ul:first-of-type {
+  margin-top: 0px;
+}
+
+ul ul, ul ol, ol ol, ol ul {
+  margin-bottom: 0;
+}
+
+dl {
+  padding: 0;
+}
+
+dl dt {
+  font-size: 14px;
+  font-weight: bold;
+  font-style: italic;
+  padding: 0;
+  margin: 15px 0 5px;
+}
+
+dl dt:first-child {
+  padding: 0;
+}
+
+dl dt>:first-child {
+  margin-top: 0px;
+}
+
+dl dt>:last-child {
+  margin-bottom: 0px;
+}
+
+dl dd {
+  margin: 0 0 15px;
+  padding: 0 15px;
+}
+
+dl dd>:first-child {
+  margin-top: 0px;
+}
+
+dl dd>:last-child {
+  margin-bottom: 0px;
+}
+
+/* CODE
+=============================================================================*/
+
+pre, code, tt {
+  font-size: 14px;
+  font-family: Consolas, "Liberation Mono", Courier, monospace;
+}
+
+code, tt {
+  margin: 0 0px;
+  padding: 0px 0px;
+  white-space: nowrap;
+  border: 1px solid #eaeaea;
+  background-color: #f8f8f8;
+  border-radius: 3px;
+}
+
+pre>code {
+  margin: 0;
+  padding: 0;
+  white-space: pre;
+  border: none;
+  background: transparent;
+}
+
+pre {
+  background-color: #f8f8f8;
+  border: 1px solid #ccc;
+  font-size: 13px;
+  line-height: 19px;
+  overflow: auto;
+  padding: 6px 10px;
+  border-radius: 3px;
+}
+
+pre code, pre tt {
+  background-color: transparent;
+  border: none;
+}
+
+kbd {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background-color: #DDDDDD;
+    background-image: linear-gradient(#F1F1F1, #DDDDDD);
+    background-repeat: repeat-x;
+    border-color: #DDDDDD #CCCCCC #CCCCCC #DDDDDD;
+    border-image: none;
+    border-radius: 2px 2px 2px 2px;
+    border-style: solid;
+    border-width: 1px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    line-height: 10px;
+    padding: 1px 4px;
+}
+
+/* QUOTES
+=============================================================================*/
+
+blockquote {
+  border-left: 4px solid #DDD;
+  padding: 0 15px;
+  color: #777;
+}
+
+blockquote>:first-child {
+  margin-top: 0px;
+}
+
+blockquote>:last-child {
+  margin-bottom: 0px;
+}
+
+/* HORIZONTAL RULES
+=============================================================================*/
+
+hr {
+  clear: both;
+  margin: 15px 0;
+  height: 0px;
+  overflow: hidden;
+  border: none;
+  background: transparent;
+  border-bottom: 4px solid #ddd;
+  padding: 0;
+}
+
+/* TABLES
+=============================================================================*/
+
+table th {
+  font-weight: bold;
+}
+
+table th, table td {
+  border: 1px solid #ccc;
+  padding: 6px 13px;
+}
+
+table tr {
+  border-top: 1px solid #ccc;
+  background-color: #fff;
+}
+
+table tr:nth-child(2n) {
+  background-color: #f8f8f8;
+}
+
+/* IMAGES
+=============================================================================*/
+
+img {
+  max-width: 100%
+}
+</style>
+
+<link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">  
+<script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
+<script >hljs.initHighlightingOnLoad();</script> 
+
+
+
+
+<script type="text/javascript">
+document.addEventListener("DOMContentLoaded", function() {
+    // 生成目录列表
+    var toc = document.createElement("ul");
+    toc.setAttribute("id", "table-of-content");
+    toc.style.cssText = "border: 1px solid #ccc;";
+    document.body.insertBefore(toc, document.body.childNodes[0]);
+    // 用于计算当前标题层级的栈,先进先出,从左到右每一个元素代表当前标题所在的层级索引，初始为空
+    var stack = new Array();
+    // 获取所有标题(h2-h6)
+    var headers = document.querySelectorAll('h1,h2,h3,h4,h5,h6');
+    for (var i = 0; i < headers.length; i++) {
+        var header = headers[i];
+        // 计算标题级数，为后面计算标号及缩进空格准备
+        var level = parseInt(header.tagName.replace('H', ''), 10);
+        // 通过两个where循环对栈进行调整,确保stack中标题级数与当前标题级数相同
+        while(stack.length < level){
+        	stack.push(0);
+        }
+        while(stack.length > level){
+        	stack.pop();
+        }
+        // 最小一级标题标号步进+1
+        stack[stack.length-1]++;
+        // 生成标题标号( 1.1,1.2.. )
+        var index = stack.join(".")
+        // 生成标题ID
+        var id = "title" + index;
+        header.setAttribute("id", id);
+        // 为标题加上标号,如果不希望显示标号，把下面这行注释就可以了
+        header.textContent = index + " " + header.textContent;
+        toc.appendChild(document.createElement("li"));
+        var a = document.createElement("a");
+        // 为目录项设置链接
+        a.setAttribute("href", "#" + id)
+        // 目录项文本前面放置缩进空格
+        a.innerHTML = new Array(level * 4).join('&nbsp;') + header.textContent;
+        toc.lastChild.appendChild(a);
+    }
+});
+</script>
+</head>
+<body>
+<h1>1、检索记录</h1>
+<p><strong>1.1从表中检索所有的行和列</strong></p>
+<blockquote>
+<p>显示的指定哪些列，可以清楚的查询返回哪些列</p>
+</blockquote>
+<pre><code>select * from emp；--不推荐
+select empno， empname，job，sal，comn from emp；--推荐
+</code></pre>
+
+<p><strong>1.2从表中检索部分行</strong></p>
+<pre><code>select * from emp where deptno = 10；
+</code></pre>
+
+<p><strong>1.3查找满足多个条件的行</strong></p>
+<blockquote>
+<p>查询部门10中所有的员工，所有得提成的员工，以及部门20中工资不超过2000美金的员工 。  
+</p>
+</blockquote>
+<pre><code>select * from emp where deptno = 10 
+or comn is not null
+or sal &lt; 2000 and deptno = 20;
+</code></pre>
+
+<p><img src="https://i.imgur.com/mtoiMhr.png" /></p>
+<pre><code>select * from emp where (deptno = 10 or comm is not null or sal &lt; 2000 ) 
+and deptno = 20;
+</code></pre>
+
+<p><img src="https://i.imgur.com/xpym57y.png" /></p>
+<p><strong>1.4、从表中检索部分列</strong></p>
+<pre><code>select ename，deptno, sal from emp;--【查找员工姓名，部门编号，奖金三列的员工信息】
+</code></pre>
+
+<p><strong>1.5、为列取有意义的名称</strong></p>
+<pre><code>select sal as salary ,comm as commission from emp;
+</code></pre>
+
+<p><strong>1.6在where子句中引用取别名的列</strong></p>
+<blockquote>
+<p>将查询作为内联视图就可以引用其中区别名的列</p>
+</blockquote>
+<pre><code>select sal as salary ,comm as commission from emp where salary &lt; 5000;--错误
+
+select *from (
+    select sal as salary ,comm as commission from emp ) x where salary &lt; 5000;--正确
+</code></pre>
+
+<p><strong>1.7 连接列值</strong></p>
+<pre><code>select ename,job from emp where deptno = 10 ;
+
+select ename + ' work as A ' + job as mrg from emp where deptno = 10 ;--Sql server
+select concat(ename, 'work as A', job) as mrg from emp where deptno = 10 ;--Mysql 和SqlServer  Oracle
+--select ename || ' work as A ' || job as mrg from emp where deptno = 10 ;--DB2 Oracle PostgreSQl
+</code></pre>
+
+<p><img src="https://i.imgur.com/IEUWkJx.png" /></p>
+<p><strong>1.8 在select语句中使用条件逻辑</strong>  
+</p>
+<pre><code>--资金小于2000 输出underpaid， 大于2000就输出 overpaid ，其他输出 ok
+select ename, sal,
+    case when sal &lt; 2000 then 'underpaid'
+         when sal &gt; 2000 then 'overpaid'
+         else 'ok'
+    end as status
+from emp;
+</code></pre>
+
+
+</body>
+</html>
+<!-- This document was created with MarkdownPad, the Markdown editor for Windows (http://markdownpad.com) -->
